# oslo.rootwrap

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .zuul.yaml  CONTRIBUTING.rst  README.rst  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements-py3.txt  test-requirements.txt  tox.ini
benchmark/: benchmark.py
doc/: requirements.txt
doc/source/: conf.py  index.rst  usage.rst
doc/source/user/: usage.rst
etc/: rootwrap.conf.sample
etc/oslo-rootwrap/: rootwrap.conf
etc/oslo.rootwrap/: rootwrap.conf
oslo/rootwrap/: client.py  cmd.py  daemon.py  filters.py  jsonrpc.py  wrapper.py
oslo_rootwrap/: __init__.py  client.py  cmd.py  daemon.py  filters.py  jsonrpc.py  version.py  wrapper.py
oslo_rootwrap/tests/: functional_base.py  run_daemon.py  test_functional.py  test_functional_eventlet.py  test_rootwrap.py
releasenotes/notes/: deprecate-eventlet-monkey-patching-462dc9f2929efab1.yaml  deprecate-version-module-4d6f35c2357af019.yaml  file-descriptor-limit-e2b2a3033b9ef21e.yaml  reap-rootwrap-daemon-process-60aebb56d8015484.yaml
releasenotes/source/: conf.py  index.rst
tests/: test_functional.py  test_rootwrap.py  test_warning.py
