[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "oslo.rootwrap"
description = "Oslo Rootwrap"
readme = "README.rst"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://docs.openstack.org/oslo.rootwrap"
Repository = "https://opendev.org/openstack/oslo.rootwrap"

[project.scripts]
oslo-rootwrap = "oslo_rootwrap.cmd:main"
oslo-rootwrap-daemon = "oslo_rootwrap.cmd:daemon"

[tool.setuptools]
packages = ["oslo_rootwrap"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "G", "LOG", "S", "UP"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"benchmark/benchmark.py" = ["S"]

[tool.mypy]
python_version = "3.10"
show_column_numbers = true
show_error_context = true
strict = true
disable_error_code = ["import-untyped"]
exclude = "(?x)(doc | releasenotes)"

[[tool.mypy.overrides]]
module = ["oslo_rootwrap.tests.*"]
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_subclassing_any = false
