[metadata]
name = oslo.rootwrap
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Oslo Rootwrap
description-file =
    README.rst
home-page = http://docs.openstack.org/developer/oslo.rootwrap
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    oslo_rootwrap

[entry_points]
console_scripts =
    oslo-rootwrap = oslo_rootwrap.cmd:main
    oslo-rootwrap-daemon = oslo_rootwrap.cmd:daemon

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True

[wheel]
universal = 1
