[metadata]
name = oslo.rootwrap
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = Oslo Rootwrap
description-file =
    README.rst
home-page = https://docs.openstack.org/oslo.rootwrap/latest/
python-requires = >=3.6
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_rootwrap

[entry_points]
console_scripts =
    oslo-rootwrap = oslo_rootwrap.cmd:main
    oslo-rootwrap-daemon = oslo_rootwrap.cmd:daemon

[wheel]
universal = 1
